endpoint de put creado, get post y put en comentarios andando. + detalles varios
